Java21+LWJGL3.3.3+Gradle8.5